# ADSM

./: #742_and_#454_Changes.patch  .gitattributes  .gitignore  .gitmodules  .travis.yml  ADSM Documentation.url  ADSM.py  Amys CrashCase.sqlite3  Basicsofstochasticmodeling.docx  CreateTables.sql  Gemfile  LICENSE  NAADSM_2007_ParameterDevelopment2_locked.ppt  Newline Technical Innovations Website.url  Probability Density Functions.docx  README  README-WIP.md  README.md  Requirements-Nix.txt  Requirements-Windows.txt  Requirements.txt  Running_Server.ipynb  SampleScenario.json  SampleScenario_fails_silently.sqlite3  TrPages_TextSupport_Disease.docx  TrPages_TextSupport_GetStart.docx  TrPages_TextSupport_Overview.docx  TrPages_TextSupport_PopProdType_apprv_02282020.docx  Windows_Development_Setup.md  _config.yml  about.md  auto-models.py  auto_runner.py  change_all_test_files.py  defaultSettings.db  gh-pages.css  index.html  installer_windows.nsi  manage.py  naadsm_training.html  (+10 more)
CEngine/: .gitignore  AUTHORS  Doxyfile  INSTALL  INSTALL.html  Makefile.am  adsm.1  bootstrap  configure.ac  doxygen.css  mpi.m4
CEngine/dll/: Makefile.am  Makefile.win
CEngine/doc/: Makefile.am
CEngine/doc/diagrams/: .gitignore  14units_2rings_overlap_1thin_1thick.gnuplot  14units_2rings_overlap_thin_rings.gnuplot  15units_1ring_s_p.gnuplot  15units_2rings_s_p_overlap.gnuplot  16units_1_zone.gnuplot  16units_2_zones.gnuplot  16units_square_w_ring_radius_0.5.gnuplot  16units_square_w_ring_radius_0.gnuplot  16units_square_w_ring_radius_2.5.gnuplot  1_zone_13_foci.gnuplot  1_zone_13_foci_merge.gnuplot  1_zone_2_foci.gnuplot  1_zone_2_foci_merge.gnuplot  1_zone_2_foci_merge_w_triangle.gnuplot  21units_3rings_overlap_thin_rings.gnuplot  2_zone_levels.gnuplot  2_zones_2_foci.gnuplot  2_zones_2_foci_merge2.gnuplot  2foci_joined.gnuplot  2foci_separate.gnuplot  3_foci_merge.gnuplot  3foci.gnuplot  3units_cycle.gnuplot  4units_line_5_zones_merged_2.gnuplot  4units_line_5_zones_merged_3.gnuplot  4units_line_5_zones_not_merged.gnuplot  6units_2_w_ring.gnuplot  6units_2_w_ring2.gnuplot  6units_2_w_rings.gnuplot  7units_w_ring.gnuplot  Makefile.am  adjacent_zones.dia  air_prevalence.gnuplot  air_prevalence_incr.gnuplot  airborne.dia  basic_circle.dia  bernoulli.gnuplot  beta.gnuplot  betapert.gnuplot  (+46 more)
CEngine/event/: event.c  event.h
CEngine/filters/: Makefile.am  exposures_table.y  full_table.y  scanner.l  shp2png.c  shp2png2.c  state_table.y  summary_gis.y  table.y  weekly_gis.y  weekly_gis_zones.y  xml2shp.c
CEngine/general/: general.c  general.h
CEngine/gis/: .gitignore  Makefile.am  gis.c  gis.h
CEngine/gis/test/: .gitignore  Makefile.am  fcmp.c  scanner.l  shell.y
CEngine/main_loop/: .gitignore  Makefile.am  adsm.c  adsm.h  cli.c  event_manager.c  event_manager.h  main_loop.c  module.h  module_loader.c  module_loader.h  mpix.c  mpix.h  parameter.c  parameter.h  spreadmodel.c  spreadmodel.h  sqlite3_exec_dict.c
CEngine/modules/: .gitignore  Makefile.am  airborne_spread_exponential_model.c  airborne_spread_exponential_model.h  airborne_spread_model.c  airborne_spread_model.h  apparent_events_table_writer.c  apparent_events_table_writer.h  basic_destruction_model.c  basic_destruction_model.h  basic_zone_focus_model.c  basic_zone_focus_model.h  conflict_resolver.c  conflict_resolver.h  contact_recorder_model.c  contact_recorder_model.h  contact_spread_model.c  contact_spread_model.h  days_since_first_detection_vaccination_trigger.c  days_since_first_detection_vaccination_trigger.h  destruction_list_monitor.c  destruction_list_monitor.h  destruction_monitor.c  destruction_monitor.h  destruction_wait_time_vaccination_trigger.c  destruction_wait_time_vaccination_trigger.h  detection_model.c  detection_model.h  detection_monitor.c  detection_monitor.h  detection_rate_vaccination_trigger.c  detection_rate_vaccination_trigger.h  disease_model.c  disease_model.h  economic_model.c  economic_model.h  exam_monitor.c  exam_monitor.h  exposure_monitor.c  exposure_monitor.h  (+69 more)
CEngine/modules/test/: 1000units_line.xml  10units_2cols.xml  12units_2rings_largesmall_plus2infected.xml  14units_2rings_overlap.xml  15units_2rings.xml  15units_line.xml  16units_2rings.xml  16units_square.xml  1unit.xml  1unit_start_infectious.xml  1unit_start_infectious_1dayin.xml  1unit_start_infectious_1dayin_4daysleft.xml  1unit_start_infectious_1dayleft.xml  1unit_start_infectious_2daysleft.xml  21units_3rings_overlap.xml  24units_2rings_plus2infected.xml  24units_ring_plus2infected.xml  2targets_same_dist_diff_size.xml  2units.xml  2units_100km.xml  2units_1_start_destroyed.xml  2units_1_start_nimmune.xml  2units_1_start_nimmune_3daysleft.xml  2units_1_start_vimmune_1dayleft.xml  2units_pigs_cattle_all_infected.xml  2units_pigs_cattle_pigs_infected.xml  2units_utf16_big_endian.xml  2units_utf16_little_endian.xml  2units_utf16_little_endian_no_bom.xml  2units_utf8.xml  2units_utf8_no_bom.xml  2units_xy.xml  3targets_same_dist_same_size.xml  3units.xml  3units_1_start_destroyed.xml  3units_1_start_vimmune.xml  3units_2_at_same_loc.xml  3units_pigs_2cattle_pigs_infected.xml  3units_pigs_cattle_sheep_all_infected.xml  3units_pigs_cattle_sheep_pigs_sheep_infected.xml  (+36 more)
CEngine/prob_dist/: .gitignore  Makefile.am  prob_dist.c  prob_dist.h
CEngine/prob_dist/test/: Makefile.am  scanner.l  shell.y
CEngine/rel_chart/: Makefile.am  rel_chart.c  rel_chart.h
CEngine/rel_chart/test/: .gitignore  Makefile.am  fcmp.c  shell.y
CEngine/replace/: replace.c  replace.h
CEngine/reporting/: Makefile.am  reporting.c  reporting.h
CEngine/rng/: rng.c  rng.h
CEngine/sc_guilib/: production_type_data.c  production_type_data.h  sc_database.c  sc_database.h  sc_guilib_outputs.c  sc_guilib_outputs.h
CEngine/spatial_search/: ch2d.c  ch2d.h  memoization.c  memoization.h  rTreeIndex.c  spatial_search.c  spatial_search.h  spatial_search_memo.c  spatial_search_memo.h  spatial_search_rtree.c
CEngine/unit/: .gitignore  scorecard.c  scorecard.h  unit.c  unit.h
CEngine/wml/: .gitignore  wml.c  wml.h
CEngine/zone/: zone.c  zone.h
(+1594 files in other folders)
